--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Setup
-title:               Lanyon
-tagline:             'A Jekyll theme'
-description:         'A reserved <a href="https://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 http://lanyon.getpoole.com
+title:               Google Summer of Code 2024
+tagline:             'Page for Google Summer of Code 2024'
+description:         'A website containing the project abstract and weekly blog about my project for google summer of code 2024'
+url:                 alessandronardin@github.io
 baseurl:             ''
 paginate:            5
 permalink:           pretty
