--- a/_config.yml
+++ b/_config.yml
@@ -2,17 +2,15 @@
 title:               Google Summer of Code 2024
 tagline:             'Page for Google Summer of Code 2024'
 description:         'A website containing the project abstract and weekly blog about my project for google summer of code 2024'
-url:                 alessandronardin@github.io
-baseurl:             'alessandronardin@github.io'
-absolute_url:        true
+url:                 https://alessandronardin.github.io/
+baseurl:             ''
 paginate:            5
 permalink:           pretty
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              Alessandro Nardin
+  email:             ale.daluch@gmail.com
 
 # Gems
 plugins:
