--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Setup
-title:               Google Summer of Code 2024
+title:               Alessandro Nardin
 tagline:             'Page for Google Summer of Code 2024'
 description:         'A website containing the project abstract and weekly blog about my project for google summer of code 2024'
 url:                 https://alessandronardin.github.io/
