--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
 title:               Alessandro Nardin
 tagline:             'Page for Google Summer of Code 2024'
-description:         'A website containing the project abstract and weekly blog about my project for google summer of code 2024'
+description:         ''
 url:                 https://alessandronardin.github.io/
 baseurl:             ''
 paginate:            5
